--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^1.1.3",
     "debug": "^2.2.0",
+    "minimist": "^1.2.0",
     "q": "^1.4.1"
   }
 }
